--- a/index.html
+++ b/index.html
@@ -1,55 +1,16 @@
 <html>
 <head>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-   <script scr="script.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/assets/css/style.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+  <title>Game "Table Shulte"</title>
 </head>
 <body>
-<div class="game">
-<table>
- <tr>
-   <td id="1">1</td>
-   <td id="2">2</td>
-   <td id="3">3</td>
-   <td id="4">4</td>
-   <td id="5">5</td>
-  </tr>    
-  <tr>
-   <td id="6">6</td>
-   <td id="7">7</td>
-   <td id="8">8</td>
-   <td id="9">9</td>
-   <td id="10">10</td>
-  </tr>    
-<tr>
-   <td id="11">1</td>
-   <td id="12">2</td>
-   <td id="13">3</td>
-   <td id="14">4</td>
-   <td id="15">5</td>
-  </tr>    
-<tr>
-   <td id="16">1</td>
-   <td id="17">2</td>
-   <td id="18">3</td>
-   <td id="19">4</td>
-   <td id="20">5</td>
-  </tr>    
-<tr>
-   <td id="21">1</td>
-   <td id="22">2</td>
-   <td id="23">3</td>
-   <td id="24">4</td>
-   <td id="25">5</td>
-  </tr>    
-
-</table>
-  
-  </div>
- 
- <p class="status">Вы играете...</p>
-  <p class="scores">Очки:</p>
-  <p>Таблица Шульте. Генерируется случайным образом поле (5 на 5). Собирайте числовую последовательность от 1 до 25 строго по порядку. </p>
-
+<div id="app">
+    
+    </div>
+<script src="/dist/build.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
