updated vue 3: new package,json

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
   <head>
-    <meta name="version" content="0.1.4"/>
-    <meta name="author" content="iv2 (iva.drakon.nov@gmail.com)"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="https://ivanshavliuga.github.io/shulte2/iv2.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
